WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271257
[WebAuthn] Unable to submit new requests after cancelling conditional mediation via abortSignal
https://bugs.webkit.org/show_bug.cgi?id=271257
Summary
[WebAuthn] Unable to submit new requests after cancelling conditional mediati...
pascoe@apple.com
Reported
2024-03-19 11:20:45 PDT
In
https://bugs.webkit.org/show_bug.cgi?id=257176
, functionality was introduced to wait for a previous request's cancel to complete before submitting a subsequent one. However, there's currently a bug that does not set the cancel flag to false if there's no subsequent request. This bug is to fix that.
Attachments
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2024-03-19 11:21:04 PDT
rdar://124727713
EWS
Comment 2
2024-03-19 14:52:14 PDT
Committed
276368@main
(80b0cc5927c7): <
https://commits.webkit.org/276368@main
> Reviewed commits have been landed. Closing PR #26134 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug