[WebAuthn] Unable to submit new requests after cancelling conditional mediation via abortSignal rdar://124727713 https://bugs.webkit.org/show_bug.cgi?id=271257

Reviewed by Charlie Wolfe.

In https://bugs.webkit.org/show_bug.cgi?id=257176, functionality was introduced to wait for a
previous request's cancel to complete before submitting a subsequent one. However, there's currently
a bug that does not set the cancel flag to false if there's no subsequent request.

This patch fixes that bug by setting m_isCancelling to false once the cancel completes regardless of
if there's a subsequent request.

* Source/WebCore/Modules/webauthn/AuthenticatorCoordinator.cpp:
(WebCore::AuthenticatorCoordinator::create):
(WebCore::AuthenticatorCoordinator::discoverFromExternalSource):

Canonical link: https://commits.webkit.org/276368@main